@@ -36,11 +36,9 @@ G_BEGIN_DECLS
 #define DEF_SAVE_URIS         TRUE
 #define DEF_SAVE_HISTORY      TRUE
 #define DEF_HISTORY_LIMIT     50
-#define DEF_SMALL_HISTORY     TRUE
-#define DEF_HISTORY_SMALL     20
+#define DEF_ITEMS_MENU        20
 #define DEF_HYPERLINKS_ONLY   FALSE
 #define DEF_CONFIRM_CLEAR     FALSE
-#define DEF_FULL_HIST_BUTTON  FALSE
 #define DEF_SINGLE_LINE       TRUE
 #define DEF_REVERSE_HISTORY   FALSE
 #define DEF_ITEM_LENGTH       50
